Build: eliminate all compile warnings (deprecation + unchecked)
Migrated deprecated APIs where reasonable; suppressed unchecked at the
narrowest scope possible.

Build config
- pom.xml (parent): enable -Xlint:unchecked in jdk9-and-above and jdk8
  profiles so future unchecked regressions surface in CI.

Production code (migrations)
- Resolver: ClassUtilities.newInstance(converter, targetClass, (Object) null)
- CharStreamTokenizer.getCurrentLocation: removed deprecated FastReader calls

Production code (narrow suppressions)
- JsonWriter.writeCustom (framework back-compat dispatch to deprecated
  JsonClassWriter.write(Writer) overload); writeDoubleArray/writeFloatArray/
  writeLongArray/writePrimitive
- ArrayFactory.newInstance, ReadOptionsBuilder loaders, WriteOptionsBuilder
  loaders, MapResolver.traverseCollection, MetaUtils helpers, CompactSetWriter,
  SealableSet/SealableNavigableSet iterator inner classes

Production code (class-level suppressions)
- util/SingletonList/Set/Map: UNINITIALIZED sentinel pattern
- reflect/AnnotationResolver: 19 reflection-driven Class<? extends Annotation>
  casts

Test code (migrations)
- 9 custom writer tests ported to JsonGenerator overload:
  CustomWriterTest, CustomJsonTest, CustomJsonSubObjectTest,
  CustomJsonSubObjectsTest, CustomClassHandlerTest, WriteOptionsBuilderTest,
  SerializedExceptionTest, WritersTest, AnnotationTest
- new URL(String) -> URI.create(s).toURL() in URLTest, ConstructorTest,
  ToonReaderTest (10 spots)
- new Locale(...) -> Locale.Builder()... in LocaleTest (7 spots)
- returnAsNativeJsonObjects() -> returnAsJsonObjects() in AnnotationTest

Test code (class-level @SuppressWarnings("unchecked","rawtypes"))
- ~37 test files exercising raw-type collections in test setup

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>